update mobile-menu in portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -85,7 +85,6 @@
                     <li class="projects__item">
                         <a class="projects__link" href="#">
                             <div class="projects__description-container">
-                                <!-- <img src="./images/technocrack.jpg" alt="Технокряк" width="370" height="295"> -->
                                 <picture>
                                     <source srcset="./images/technocrack_370.jpg" media="(min-width: 1200px)" type="image/jpeg">
                                     <source srcset="./images/technocrack_354.jpg" media="(min-width: 768px)" type="image/jpeg">
@@ -107,7 +106,6 @@
                     <li class="projects__item">
                         <a class="projects__link" href="#">
                             <div class="projects__description-container">
-                                <!-- <img src="./images/poster_new-orlean.jpg" alt="Постер New Orlean vs Golden Star" width="370" height="295"> -->
                                 <picture>
                                     <source srcset="./images/poster_new-orlean_370.jpg" media="(min-width: 1200px)" type="image/jpeg">
                                     <source srcset="./images/poster_new-orlean_354.jpg" media="(min-width: 768px)" type="image/jpeg">
@@ -131,7 +129,6 @@
                     <li class="projects__item">
                         <a class="projects__link" href="">
                             <div class="projects__description-container">
-                                <!-- <img src="./images/restaurant_seafood.jpg" alt="Ресторан Seafood" width="370" height="295"> -->
                                 <picture>
                                     <source srcset="./images/restaurant_seafood_370.jpg" media="(min-width: 1200px)" type="image/jpeg">
                                     <source srcset="./images/restaurant_seafood_354.jpg" media="(min-width: 768px)" type="image/jpeg">
@@ -155,7 +152,6 @@
                     <li class="projects__item">
                         <a class="projects__link" href="#">
                             <div class="projects__description-container">
-                                <!-- <img src="./images/project_prime.jpg" alt="Проєкт Prime" width="370" height="295"> -->
                                 <picture>
                                     <source srcset="./images/project_prime_370.jpg" media="(min-width: 1200px)" type="image/jpeg">
                                     <source srcset="./images/project_prime_354.jpg" media="(min-width: 768px)" type="image/jpeg">
@@ -179,7 +175,6 @@
                     <li class="projects__item">
                         <a class="projects__link" href="#">
                             <div class="projects__description-container">
-                                <!-- <img src="./images/project_boxes.jpg" alt="Проєкт Boxes" width="370" height="295"> -->
                                 <picture>
                                     <source srcset="./images/project_boxes_370.jpg" media="(min-width: 1200px)" type="image/jpeg">
                                     <source srcset="./images/project_boxes_354.jpg" media="(min-width: 768px)" type="image/jpeg">
@@ -203,7 +198,6 @@
                     <li class="projects__item">
                         <a class="projects__link" href="#">
                             <div class="projects__description-container">
-                                <!-- <img src="./images/inspiration_has_no_borders.jpg" alt="Inspiration has no Borders" width="370" height="295"> -->
                                 <picture>
                                     <source srcset="./images/inspiration_has_no_borders_370.jpg" media="(min-width: 1200px)" type="image/jpeg">
                                     <source srcset="./images/inspiration_has_no_borders_354.jpg" media="(min-width: 768px)" type="image/jpeg">
@@ -227,7 +221,6 @@
                     <li class="projects__item">
                         <a class="projects__link" href="#">
                             <div class="projects__description-container">
-                                <!-- <img src="./images/book_limited-edition.jpg" alt="Видання Limited Edition" width="370" height="295"> -->
                                 <picture>
                                     <source srcset="./images/book_limited-edition_370.jpg" media="(min-width: 1200px)" type="image/jpeg">
                                     <source srcset="./images/book_limited-edition_354.jpg" media="(min-width: 768px)" type="image/jpeg">
@@ -251,7 +244,6 @@
                     <li class="projects__item">
                         <a class="projects__link" href="#">
                             <div class="projects__description-container">
-                                <!-- <img src="./images/project_lab.jpg" alt="Проєкт LAB" width="370" height="295"> -->
                                 <picture>
                                     <source srcset="./images/project_lab_370.jpg" media="(min-width: 1200px)" type="image/jpeg">
                                     <source srcset="./images/project_lab_354.jpg" media="(min-width: 768px)" type="image/jpeg">
@@ -275,7 +267,6 @@
                     <li class="projects__item">
                         <a class="projects__link" href="#">
                             <div class="projects__description-container">
-                                <!-- <img src="./images/growing-business.jpg" alt="Growing Business" width="370" height="295"> -->
                                 <picture>
                                     <source srcset="./images/growing-business_370.jpg" media="(min-width: 1200px)" type="image/jpeg">
                                     <source srcset="./images/growing-business_354.jpg" media="(min-width: 768px)" type="image/jpeg">
@@ -371,6 +362,6 @@
     <script defer src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
         integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
         crossorigin="anonymous"></script>
-    <script defer src="js/menu.js"></script>
+    <script defer src="js/mobile-menu.js"></script>
 </body>
 </html>
